[package]
name = "minnas-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rmcp = {version = "0.6.4", features = ["transport-io"]}
serde = "1.0.226"
tokio = {version = "1.47.1", features = ["rt-multi-thread", "io-std"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
